Closed Bug 1644111 Opened 5 years ago Closed 5 years ago

We shouldn't send promotion rate telemetry when the nursery was empty

Categories

(Core :: JavaScript: GC, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox79 --- fixed

People

(Reporter: jonco, Assigned: allstars.chh)

Details

Attachments

(2 files)

As spotted by Steve in code review. Currently we always send promotion rate telemetry after nursery collection, even when the nursery was empty. In this case we send a dummy value of zero. I don't think this makes sense.

(In reply to Jon Coppeard (:jonco) from comment #0)

As spotted by Steve in code review. Currently we always send promotion rate telemetry after nursery collection, even when the nursery was empty. In this case we send a dummy value of zero. I don't think this makes sense.

Actually, in that review I also said that this wouldn't happen -- I don't think we can reach that code with an empty nursery, because the entire doCollection is skipped if nursery.isEmpty().

(In reply to Steve Fink [:sfink] [:s:] from comment #1)

the entire doCollection is skipped if nursery.isEmpty().

The telemetry is sent at the end of collection() so I think this does happen sadly.

Yoshi, can you look at this when you get the chance?

Flags: needinfo?(allstars.chh)
Assignee: nobody → allstars.chh
Flags: needinfo?(allstars.chh)
Priority: -- → P3
Attachment #9157772 - Attachment description: Bug 1644111 : Don't send promotionRate telemetry if nursery was empty. → Bug 1644111 : Don't send promotionRate and pretenureCount telemetry if nursery was empty.
Pushed by allstars.chh@gmail.com: https://hg.mozilla.org/integration/autoland/rev/583863c0f21a Don't send promotionRate and pretenureCount telemetry if nursery was empty. r=jonco https://hg.mozilla.org/integration/autoland/rev/00f8ffa561fb Remove isEnabled() check. r=jonco
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Regressions: 1651134
No longer regressions: 1651134
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: