Bug 1644111 : Remove isEnabled() check. r=jonco

As we have bail out early if !isEnabled()
https://searchfox.org/mozilla-central/rev/5e6c7717255ca9638b2856c2b2058919aec1d21d/js/src/gc/Nursery.cpp#965

Differential Revision: https://phabricator.services.mozilla.com/D80282